--- a/app/src/main/res/layout/fragment_all_books.xml
+++ b/app/src/main/res/layout/fragment_all_books.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="allBookViewModel"
+            type="com.example.mybooklibrary.allbooks.AllBooksViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,11 +15,13 @@
         tools:context=".allbooks.AllBooksFragment">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/bookRecyclerView"
             android:layout_width="409dp"
             android:layout_height="601dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
