--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,10 +12,68 @@
         <action
             android:id="@+id/action_mainFragment_to_allBooksFragment"
             app:destination="@id/allBooksFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_addBookFragment"
+            app:destination="@id/addBookFragment" />
     </fragment>
     <fragment
         android:id="@+id/allBooksFragment"
         android:name="com.example.mybooklibrary.allbooks.AllBooksFragment"
         android:label="AllBooksFragment"
-        tools:layout="@layout/fragment_all_books"/>
+        tools:layout="@layout/fragment_all_books">
+        <action
+            android:id="@+id/action_allBooksFragment_to_bookDetailsFragment"
+            app:destination="@id/bookDetailsFragment" />
+        <argument
+            android:name="key"
+            app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/addBookFragment"
+        android:name="com.example.mybooklibrary.addbook.AddBookFragment"
+        android:label="fragment_add_book"
+        tools:layout="@layout/fragment_add_book" >
+        <action
+            android:id="@+id/action_addBookFragment_to_mainFragment"
+            app:destination="@id/mainFragment"
+            app:popUpTo="@id/mainFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/bookDetailsFragment"
+        android:name="com.example.mybooklibrary.bookdetails.BookDetailsFragment"
+        android:label="BookDetailsFragment"
+        tools:layout="@layout/fragment_book_details">
+        <argument
+            android:name="book"
+            app:argType="com.example.mybooklibrary.database.Books" />
+        <action
+            android:id="@+id/action_bookDetailsFragment_to_allBooksFragment"
+            app:destination="@id/allBooksFragment"
+            app:popUpTo="@id/allBooksFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_bookDetailsFragment_to_updateBookFragment"
+            app:destination="@id/updateBookFragment" />
+        <argument
+            android:name="key"
+            app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/updateBookFragment"
+        android:name="com.example.mybooklibrary.updatebook.UpdateBookFragment"
+        android:label="UpdateBookFragment"
+        tools:layout="@layout/fragment_update_book">
+        <argument
+            android:name="book"
+            app:argType="com.example.mybooklibrary.database.Books" />
+        <action
+            android:id="@+id/action_updateBookFragment_to_allBooksFragment"
+            app:destination="@id/allBooksFragment"
+            app:popUpTo="@id/allBooksFragment"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="key"
+            app:argType="integer" />
+    </fragment>
 </navigation>
