--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,9 @@
         <item name="android:layout_marginTop">20dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
+
+    <style name="text_style">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
