--- a/app/src/main/res/layout/book_list_items.xml
+++ b/app/src/main/res/layout/book_list_items.xml
@@ -19,7 +19,7 @@
         android:onClick="@{() -> bookClickListener.onClick(book)}"
         android:background="#3F51B5"
         android:elevation="7dp"
-        android:layout_margin="10dp">
+        android:layout_marginVertical="10dp">
 
         <TextView
             android:id="@+id/tv_id"
