--- a/app/src/main/res/layout/fragment_add_book.xml
+++ b/app/src/main/res/layout/fragment_add_book.xml
@@ -102,10 +102,12 @@
             style="@style/text_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
             android:text="@string/descriptions"
             app:layout_constraintBottom_toBottomOf="@+id/edt_book_description"
             app:layout_constraintEnd_toStartOf="@+id/edt_book_description"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/edt_book_description" />
 
         <EditText
